<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/bg_item"
    android:layout_margin="18dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/iv_rick"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_rick"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_dead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dead_human"
        android:maxLines="3"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/iv_rick"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"/>

    <TextView
        android:id="@+id/tv_last_known_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/last_known_location"
        android:maxLines="3"
        android:textSize="12sp"
        android:textColor="@color/gray"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/iv_rick"
        app:layout_constraintTop_toBottomOf="@id/tv_dead"/>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/descritpion"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/iv_rick"
        app:layout_constraintTop_toBottomOf="@+id/tv_last_known_location"/>

    <TextView
        android:id="@+id/tv_first_seen_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="12sp"
        android:text="@string/first_seen_in"
        android:textColor="@color/grey"
        app:layout_constraintStart_toEndOf="@id/iv_rick"
        app:layout_constraintTop_toBottomOf="@id/tv_location"/>

    <TextView
        android:id="@+id/tv_seen"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/text"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/iv_rick"
        app:layout_constraintTop_toBottomOf="@id/tv_first_seen_in" />

</androidx.constraintlayout.widget.ConstraintLayout>